Fixing navbar icon colour for dark mode

--- a/src/assets/style/navbar.scss
+++ b/src/assets/style/navbar.scss
@@ -1,6 +1,10 @@
 .rightNav {
   .icon {
     color: $theme-color;
+
+    .dark-theme & {
+      color: rgb(185, 216, 192);
+    }
   }
 
   .iconClicked {
